# evalforge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py  data.py  fixture_schema.sql  requirements.txt
fixtures/: snapshot.sqlite
scripts/: fixture_export.py  ingest_wildchat.py  resume_pipeline.py  run_classifier.py  run_eval.py  run_labeling.py  run_pipeline.py  run_voting.py  scheduler.py  smoke_test.py
sql/: 001_schema.sql
src/evalforge/: claude_call.py  config.py  db.py  pipeline.py  schemas.py
src/evalforge/classifier/: clustering.py  embeddings.py  judge.py  naming.py
src/evalforge/eval_runner/: candidate.py  regression.py  runner.py  scorer.py
src/evalforge/ingestion/: adapters.py  redaction.py  sampling.py  wildchat.py
src/evalforge/labeling/: aggregate.py  curate.py  dedup.py  golden.py
tests/: test_claude_call.py  test_clustering.py  test_redaction.py  test_scorer.py
